mini-hero trial

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html>
   <head>
     <title>Lino Maurer | Developer & Dreamer</title>
@@ -10,6 +10,9 @@
   </head>
   <body>
     <div class="card">
+      <div class="mini-hero">
+          <img src="https://source.unsplash.com/user/erondu/1600x90">
+      </div>
       <h1>Hi, I am Lino & this is a test:)</h1>
       <img src="./images/profile_image_eq.jpeg" alt="Profile Image Lino Maurer" id="profile_picture">
       <p><strong>Interested Listener. Ambitious Professional. Curious Being.</strong></p>
